added Questions, Result

--- a/src/constants/language/constants.json
+++ b/src/constants/language/constants.json
@@ -34,37 +34,61 @@
     "previous_disease_hint": "You may select more than one (Not Mandatory)",
     "heart": "Heart Conditions",
     "diabetes": "Uncontrolled Diabetes",
-    "blood_pressure": "High Blood Pressure", 
+    "blood_pressure": "High Blood Pressure",
     "lung_disease": "Lung Diseases/Asthma",
     "cancer": "Cancer ",
-    "stroke" : "Stroke",
+    "stroke": "Stroke",
     "kidney": "Kidney Diseases",
     "steroids": "Taking Steroids",
-    "none": "None"
-
+    "none": "None",
+    "mild": "Mild",
+    "medium": "Medium",
+    "high": "High"
   },
   "ml": {
     "title": "സുരക്ഷ",
-    "enter_number": "മൊബൈൽ നമ്പർ രേഖപ്പെടുത്തുക..",
-    "enter_name": "പേര് രേഖപ്പെടുത്തുക..",
-    "enter_number_valid": "ദയവായി നിങ്ങളുടെ കൺട്രി കൊട് ചേർത്ത്  മൊബൈൽ  നമ്പർ രേഖപ്പെടുത്തുക",
-    "travel_history": "നിങ്ങളോ /വീട്ടിലുള്ള മറ്റാരെങ്കിലുമോ കഴിഞ്ഞ രണ്ടാഴ്ച്ചക്കുള്ളിൽ വിദേശയാത്ര ചെയ്തിട്ടുണ്ടോ?",
-    "travel_country": "ഏത് രാജ്യം?",
-    "yes": "അതെ",
+    "enter_number": " മൊബൈൽ നമ്പർ ടൈപ്പ് ചെയ്യുക",
+    "enter_number_valid": "രാജ്യത്തിൻ്റെ കോഡ് കൂടെ ചേർത്ത് മൊബൈൽ നമ്പർ ടൈപ്പ് ചെയ്യുക(+91).",
+    "enter_name": "പേര്...",
+    "travel_history": " കഴിഞ്ഞ 2 ആഴ്ചക്കിയിൽ നിങ്ങളോ/കുടുംബമോ വിദേശയാത്ര നടത്തിയിട്ടുണ്ടോ?",
+    "travel_country": "യാത്ര നടത്തിയ രാജ്യത്തിൻ്റെ പേര്",
+    "yes": " ഉണ്ട്",
     "no": "ഇല്ല",
-    "country_name_placeholder": "രാജ്യത്തിന്റെ പേര്",
-    "people_live_with": "നിങ്ങൾ ഇപ്പോൾ താമസിക്കുന്ന  ഇടത്തു എത്ര വ്യക്തികൾ ഉണ്ട് ",
-    "enter_age": "വയസ്?",
-    "enter_gender": "ലിംഗം?",
-    "otp_header": "നിങ്ങൾക്ക് ലഭിച്ച otp നൽകുക ",
-    "otp_label": "ഓടിപി ക്ക് വേണ്ടി മൊബിലിയിൽ ലഭിച്ച നാലക്ക സംഖ്യ  നോക്കുക",
-    "enter_address": "നിങ്ങളുടെ വിലാസം രേഖപ്പെടുത്തുക",
-    "house_name": "വീടിന്റെ പേര്:",
-    "street": "തെരുവ്",
+    "country_name_placeholder": "രാജ്യത്തിൻ്റെ പേര്",
+    "people_live_with": "എത്ര പേരടങ്ങുന്ന സംഘമായിട്ടാണ് അവിടെ താമസിച്ചിരുന്നത്?",
+    "enter_age": "നിങ്ങളുടെ പ്രായം.",
+    "enter_gender": "ലിംഗം",
+    "otp_header": "ഒ ടി പി നമ്പർ ടൈപ്പ് ചെയ്യുക...",
+    "otp_label": "ഒ ടി പി ക്കായി നിങ്ങളുടെ മെസേജ് ഇൻബോക്സ് സന്ദർശിക്കുക",
+    "enter_address": " മേൽവിലാസം രേഖപ്പെടുത്തുക",
+    "house_name": " വീട്ടു പേര്:",
+    "street": " ഏറ്റവും അടുത്തു കിടക്കുന്ന തെരുവ്",
     "city": "നഗരം",
-    "state": "സംസ്ഥാനം",
-    "pincode": "പിൻ കോഡ്",
-    "otp_error": "അസാധുവായ OTP ദയവായി ശരിയായ OTP നൽകുക",
-    "choose_create_user": "ഉപയോക്താവിനെ തിരഞ്ഞെടുക്കുക അഥവാ കുടുംബത്തെ ചേർക്കുക"
+    "locality": "നിങ്ങളുടെ പ്രദേശത്തിൻ്റെ പേര്*",
+    "pincode": "പിൻ കോഡ്*",
+    "otp_error": "ഒ ടി പി അസാധുവാണ് ,ദയവു ചെയ്ത് തിരുത്തുക",
+    "choose_create_user": "കുടുംബാംഗങ്ങളെ തിരഞ്ഞെടുക്കുക / ചേർക്കുക",
+    "enter_email": "നിങ്ങളുടെ ഈമെയിൽ അഡ്രസ്സ്",
+    "enter_password": "രഹസ്യ കോഡ്",
+    "enter_email_valid": "സാധുവായ ഈമെയിൽ / രഹസ്യകോഡ് ടൈപ്പ് ചെയ്യുക",
+    "enter_district": "നിങ്ങളുടെ ജില്ല",
+    "contact_carrier": " രേഗിയുമായി സമ്പർക്കത്തിലേർപ്പെട്ടിരുന്നോ?",
+    "contact_carrier_suspected": " രോഗ സാധ്യതയുള്ളവരുമായി (ഐസൊലേഷനിൽ കഴിയുന്നവർ) ബന്ധപ്പെട്ടിരുന്നോ?",
+    "aged_question": " 60 വയസ്സിനു മുകളിൽ പ്രായമുള്ളവർ കൂടെ താമസിക്കുന്നുണ്ടോ?",
+    "relative_chronic": " കൂടെയുള്ളവർ ആരെങ്കിലും വിട്ടുമാറാത്ത രോഗവശത ഉള്ളവരാണോ? ",
+    "previous_disease": "ഇവയിലേതെങ്കിലും രോഗം നിങ്ങളെ അലട്ടിയിരുന്നോ??",
+    "previous_disease_hint": "നിങ്ങൾക്ക് ഒന്നിൽ കൂടുതൽ തിരഞ്ഞെടുക്കാം (നിർബന്ധമില്ല)",
+    "heart": "ഹൃദ്രോഗം",
+    "diabetes": "അനിയന്ത്രിതമായ പ്രമേഹം",
+    "blood_pressure": "ഉയർന്ന രക്തസമ്മർദ്ദം",
+    "lung_disease": "ശ്വാസകോശ രോഗങ്ങൾ / ആസ്ത്മ",
+    "cancer": " കാൻസർ ",
+    "stroke": "സ്ട്രോക്ക്",
+    "kidney": "വൃക്കരോഗങ്ങൾ",
+    "steroids": "സ്റ്റിറോയിഡുകൾ എടുക്കുന്നു",
+    "none": "ഇവ ഒന്നുമില്ല",
+    "mild": "ലഘു",
+    "medium": "മിതമായ",
+    "high": "കഠിനം"
   }
 }
