Fixed few typos

--- a/src/constants/language/constants.json
+++ b/src/constants/language/constants.json
@@ -4,7 +4,7 @@
     "enter_number": "Enter Your Mobile Number",
     "enter_number_valid": "Enter a Valid Mobile Number with Country Code(+91).",
     "enter_name": "Enter Your Name...",
-    "travel_history": "Have you/family travelled abroad in the past 2 weeks",
+    "travel_history": "Have you or your family travelled abroad in the past 2 weeks",
     "travel_country": "Enter Country Name",
     "yes": "Yes",
     "no": "No",
@@ -26,10 +26,10 @@
     "enter_password": "Enter Password",
     "enter_email_valid": "Please Enter Valid Email or Password",
     "enter_district": "Enter District",
-    "contact_carrier": "Have you came in contact with Carrier?",
-    "contact_carrier_suspected": "Have you came in contact with Suspected Carrier?",
+    "contact_carrier": "Have you come in contact with a Carrier?",
+    "contact_carrier_suspected": "Have you come in contact with any Suspected Carriers?",
     "aged_question": "Do you have anyone staying with you who is above the age of 60?",
-    "relative_chronic": "Do you have anyone staying with you who suffers from any of the chronic diseases?",
+    "relative_chronic": "Do you have anyone staying with you who suffers from any of the following chronic diseases?",
     "previous_disease": "Do you have a history of any of these?",
     "previous_disease_hint": "You may select more than one (Not Mandatory)",
     "heart": "Heart Conditions",
